# cvae-pipelining

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.txt
config/: default.yaml
src/core/: dataset.py  models.py
src/orchestration/: constants.py  utils.py
src/tasks/: fit.py  plot.py  preprocessing.py  test.py
src/workflows/: inference.py  train_vae.py
