[project]
name = "cvaepipelining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachey>=0.2.1",
    "cartopy>=0.24.1",
    "dask>=2025.5.1",
    "flytekit>=1.15.4",
    "flytekitplugins-deck-standard",
    "gcsfs>=2025.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "xarray>=2025.4.0",
    "xbatcher>=0.4.0",
    "zarr>=3.0.8",
]
